# arcanio

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  go.mod  main.go
app/: rename.go
cmd/: rename.go  root.go
lib/: sources.go
src/: error.rs  main.rs
src/cli/: logging.rs  main.rs  mod.rs  structure.rs
src/cli/commands/: config.rs  mod.rs  normalize.rs  temp.rs  test.rs
src/config/: builder.rs  defaults.rs  merge.rs  mod.rs  paths.rs  tests.rs
src/config/validation/: errors.rs  mod.rs  rules.rs  validators.rs
src/lib/: error.rs  files.rs  mod.rs
src/lib/music/: metadata.rs
