[package]
name = "arcanio"
version = "0.0.0"
edition = "2021"

[lib]
name = "arcanio_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "arcanio"
path = "src/main.rs"


[dependencies]
color-eyre = "0.6.5"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
