[package]
name = "arcanio"
version = "0.0.0"
edition = "2021"

[lib]
name = "arcanio_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "arcanio"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
config = "0.14"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.8"
